--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <% name = Joe %>
-  <h1><%= Goodbye Joe %></h1>
+  <% name = "Joe" %><h1>Goodbye <%= name %></h1>
   
   
 </html>
