--- a/views/date.erb
+++ b/views/date.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <% date = DateTime.now %>
-  <h1>The date is <%=date%> </h1>
+ <h1>Today</h1>
+  <p>The date is <% days = %w(Sunday Monday Tuesday Wednesday Thursday Friday Saturday) %><% months = %w(January February March April May June July August September October November December) %><% currentTime = Time.now %><%= days[currentTime.wday] + ', ' + months[currentTime.month - 1] + ' ' + format('%02d', currentTime.mday) + ', ' + currentTime.year.to_s %>.</p>
+</body>
+</html> 
+
   
   
 </html>
